src/test/resources/refCompilerOutput/invalid/semanticErr/variables/basicTypeErr03.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:10 -- Incompatible type at "foo" (expected: INT, actual: STRING)
